glx/testdata/invalid/person-bad-id-format.glx
# Invalid: Entity ID doesn't match required pattern
persons:
  bad-id-format:
    concluded_identity:
      primary_name: "Test Person"
